test-reports/Basic_Component_Tests_20250901_171845.txt
SyntaxError: /Users/peterhanssens/consulting/CloudShuttle/radix-ui/tests/all-components.spec.ts: Unexpected reserved word 'await'. (371:6)

  369 |       await firstScrollArea.evaluate((el) => {
  370 |         el.scrollTop = 100;
> 371 |       await page.waitForTimeout(500);
      |       ^
  372 |       
  373 |       // Test horizontal scrolling
  374 |       await firstScrollArea.evaluate((el) => {

   at all-components.spec.ts:371

  369 |       await firstScrollArea.evaluate((el) => {
  370 |         el.scrollTop = 100;
> 371 |       await page.waitForTimeout(500);
      |      ^
  372 |       
  373 |       // Test horizontal scrolling
  374 |       await firstScrollArea.evaluate((el) => {
Error: No tests found.
Make sure that arguments are regular expressions matching test files.
You may need to escape symbols like "$" or "*" and quote the arguments.

